--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 /*icon*/
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+/*font*/
+@import url('https://fonts.googleapis.com/css2?family=Gentium+Plus:ital,wght@0,400;0,700;1,400&display=swap');
 
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Gentium Plus', serif;
 }
 .welImg {
     width: 100%;
@@ -30,7 +33,14 @@ body {
     }    
 }
 
-
 .search {
     margin-top: -25px;
+}
+
+.category-bg {
+    background-image: url('https://img.rawpixel.com/private/static/images/website/2022-05/pf-40-lukestackpoole-starry-night-b.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=9a841412d966dd1c08f5907bee0c738a');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: darken;
 }
